--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="datatarget">
-  <app-top-bar-single [data]="datatarget" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+  <app-top-bar-single [data]="datatarget" [backButton]="backButton"></app-top-bar-single>
   <div class=" jumbotron m-md-4 p-md-3">
     <div class="application-component">
       <h4>{{ 'DATATARGET.NAME' | translate }}</h4>
@@ -10,33 +10,48 @@
       <p class="mb-5">{{datatarget.timeout}}</p>
       <h4>{{ 'DATATARGET.TYPE' | translate }}</h4>
       <p class="mb-5">{{datatarget.type}}</p>
-      <h4>{{ 'DATATARGET.RELATIONS' | translate }}</h4>
-      <div *ngIf="dataTargetRelations.length === 0">
-        <p class="mb-5">{{'DATATARGET.NO-RELATIONS' | translate}}</p>
+      
+      <h4>{{ 'DATATARGET.AUTHORIZATIONHEADER' | translate }}</h4>
+      <div *ngIf="datatarget.authorizationHeader; then showAuthHeader else showNoAuthText">
       </div>
-      <div *ngFor="let relation of dataTargetRelations">
-        <div class="row my-3">
-          <div class="col-md-2">
-            <h6>{{'DATATARGET.PAYLOADEDECODER' | translate}}</h6>
-          </div>
-          <div class="col-md-4">
-            <ul>
-              <li>
-                {{relation.dataTarget.name}}
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-2">
-            <h6>{{'DATATARGET.IOTDEVICE' | translate}}</h6>
-          </div>
-          <div class="col-md-4">
-            <div *ngFor="let device of relation.iotDevices">
-              <ul>
-                <li>{{device.name}}</li>
-              </ul>
+      <ng-template #showAuthHeader>
+        <pre class="mb-5">{{datatarget.authorizationHeader}}</pre>
+      </ng-template>
+      <ng-template #showNoAuthText>
+        <p class="mb-5">{{ 'DATATARGET.NO-AUTHORIZATIONHEADER' | translate }}</p>
+      </ng-template>
+
+      <div class="form-group mt-3">
+        <h4>{{ 'DATATARGET.RELATIONS' | translate }}</h4>
+      <div *ngIf="dataTargetRelations?.length === 0">
+        <p>{{'DATATARGET.NO-RELATIONS' | translate}}</p>
+      </div>
+        <div *ngIf="dataTargetRelations">
+          <div *ngFor="let relation of dataTargetRelations">
+            <div class="row my-3">
+              <div class="col-md-2">
+                <h6>{{'DATATARGET.PAYLOADEDECODER' | translate}}</h6>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <li>
+                    {{relation.dataTarget.name}}
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-2">
+                <h6>{{'DATATARGET.IOTDEVICE' | translate}}</h6>
+              </div>
+              <div class="col-md-4">
+                <div *ngFor="let device of relation.iotDevices">
+                  <ul>
+                    <li>{{device.name}}</li>
+                  </ul>
+                </div>
+              </div>
+              <mat-divider></mat-divider>
             </div>
           </div>
-          <mat-divider></mat-divider>
         </div>
       </div>
     </div>
