refactor bulk import

--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -7,8 +7,8 @@
                     <input type="file" name="datasource_upload" class="choose-file" id="datasource_upload"
                         accept=".xlsx,.xls,.csv" ngf-max-size="20MB" fd-input (change)="handleDropedFile($event)" />
                     <p class="upload_drop_file">Choose or drop here Your CSV File.</p>
-                    <!-- <a class="dowload_csv" href="sample-file-link" download="download"><i class="fa fa-download"></i>
-                        Download CSV File</a> -->
+                    <a class="dowload_csv" href="sample-file-link" download="download"><i class="fa fa-download"></i>
+                        Download CSV File</a>
                 </div>
             </div>
         </div>
