--- a/src/app/navbar/sigfox-dropdown/sigfox-dropdown.component.html
+++ b/src/app/navbar/sigfox-dropdown/sigfox-dropdown.component.html
@@ -8,14 +8,14 @@
 
     <ul class="navbar-nav flex-column">
         <li class="nav-item">
-            <a routerLink="/sigfox/sigfox-administration" routerLinkActive="active" 
+            <a routerLink="/sigfox/administration" routerLinkActive="active" 
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.SIGFOX-ADMIN' | translate}}
             </a>
             <fa-icon [icon]="faToolbox" class="navbar-icon"></fa-icon>
         </li>
         <li class="nav-item">
-            <a routerLink="/sigfox/sigfox-profiles" routerLinkActive="active"
+            <a routerLink="/sigfox/profiles" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.SIGFOX-PROFILES' | translate}}
             </a>
