IOT-273 add profile skeleton

--- a/src/app/sigfox/sigfox-profiles/sigfox-profiles-list/sigfox-profiles-list.component.html
+++ b/src/app/sigfox/sigfox-profiles/sigfox-profiles-list/sigfox-profiles-list.component.html
@@ -1,1 +1,1 @@
-<p>sigfox-profiles-list works!</p>
+<app-top-bar [showSelectedSort]="false" [title]="'SIGFOX.PROFILES.NAME' | translate"></app-top-bar>
