--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="application">
-    <app-top-bar-single [data]="application" [backButton]="backButton"></app-top-bar-single>
+<ng-container *ngIf="device">
+    <app-top-bar-single [data]="device" [backButton]="backButton"></app-top-bar-single>
 </ng-container>
 <div class=" jumbotron m-md-4 p-md-3">
     <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
