--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -21,15 +21,11 @@
   <div class="jumbotron my-4 m-md-4 py-3 p-md-3">
     <div class="row">
       <div class="col-sm-12">
-        <app-top-bar [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate" [sort]="sort"
+        <app-sub-bar [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate" [sort]="sort"
           [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
-          [ctaLabel]="'FORM.CREATE-NEW-IOT-DEVICE' | translate" [ctaRouterLink]="'new-iot-device'"
-          (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
-
-        <!-- <button (click)="ConvertCSVtoJSON()">Convert CSV to JSON</button>
-        <hr>
-        <input type="file" accept=".csv" (change)="handleFileSelect($event)"> -->
-        <app-bulk-import [csvRecords]="csvRecords"></app-bulk-import>
+          [ctaLabelPrimary]="'FORM.CREATE-NEW-IOT-DEVICE' | translate" [ctaRouterLinkPrimary]="'new-iot-device'"
+          [ctaLabelSecondary]="'APPLICATION.IMPORT-CSV' | translate" [ctaRouterLinkSecondary]="'bulk-import'"
+          (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-sub-bar>
         <app-iot-devices-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"
           [application]="application"></app-iot-devices-table>
       </div>
