--- a/src/assets/scss/setup/_typography.scss
+++ b/src/assets/scss/setup/_typography.scss
@@ -11,8 +11,8 @@ h4,
 h5,
 p,
 a {
-  font-family: roboto;
-  margin-bottom: 0;
+  font-family: "Roboto";
+  margin-bottom: 0 !important;
 }
 
 /*####################### HEADLINE #########################*/
