--- a/src/assets/scss/setup/_utilities.scss
+++ b/src/assets/scss/setup/_utilities.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 // Unstyled list helper
 @mixin unstyled-list() {
   list-style-type: none;
@@ -55,7 +57,7 @@
 }
 
 
-.Deactived,
+.Deactive,
 .Deaktiveret {
   color: $color-error;
 }
