--- a/src/app/applications/bulk-import/bulk-import.component.scss
+++ b/src/app/applications/bulk-import/bulk-import.component.scss
@@ -1,69 +1,72 @@
 @import '~src/assets/scss/setup/utilities';
 @import '~src/assets/scss/setup/variables';
 
-
-
 $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
 
-
-
 .choose-file:before {
   content: attr(data-content);
   width: 100%;
   height: 100%;
-  background: $color-bg-normal;
-  position: absolute;
+  background: $color-bg-normal !important;
   opacity: 1 !important;
   text-align: center;
-  line-height: 10vh;
+  line-height: 20vh;
+
+  &:hover {
+    background-color: lighten($color-primary, 35%);
+  }
 }
 
 .choose-file {
   @include add-shadow;
   content: attr(data-content);
   width: 100%;
-  height: 10vh;
-  background: $color-bg-normal;
+  height: 15vh;
+  background: $color-bg-normal !important;
   position: relative;
   opacity: 1 !important;
   text-align: center;
   border: dashed 5px $color-primary;
+
+  &:hover {
+    cursor: pointer;
+    background-color: lighten($color-primary, 35%) !important;
+    opacity: 0.8;
+  }
 }
 
 .choose-file:after {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   content: '\f093';
-  position: relative;
-  left: 33.3%;
-}
-
-.dowload_csv {
-  font-size: 14px;
-  color: #000;
-  text-align: center;
-  margin: 10px auto;
-  padding: 10px 15px;
-  display: inline-block;
-  border: solid 1px #374150;
-  border-radius: 25px;
-}
-
-.dowload_csv:hover {
-  background: #374150;
-  text-decoration: none;
-  color: #fff;
-}
-
-.upload_drop_file {
   position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 161px;
-  z-index: 5;
-  font-size: 12px;
+  font-size: $icon-size-big;
+  left: 50%;
+  transform: translate(-50%, 80%);
+}
+
+.files-list {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 10px auto;
+  background: #ffffff;
+  border: 1px dashed;
+  border-radius: 12px;
+  padding: 5px;
+  color: $color-primary;
+}
+
+.files-list .delete-file {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.files-list .delete-file fa-icon {
+  width: 30px;
 }
