--- a/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
@@ -5,7 +5,6 @@
 </select>
 <fa-icon [icon]="faExchangeAlt"></fa-icon>
 <mat-divider></mat-divider>
-
 <ul class="navbar-nav flex-column mb-4">
     <li class="nav-item py-2">
         <a routerLink="/applications" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
@@ -13,6 +12,9 @@
             {{ 'NAV.APPLICATIONS' | translate }}
         </a>
         <fa-icon [icon]="faLayergroup" class="navbar-icon"></fa-icon>
+    </li>
+    <li>
+        <app-sigfox-dropdown></app-sigfox-dropdown>
     </li>
     <div *ngIf="user && isOrganisationAdmin(orgSelect.value)">
         <li class="nav-item">
