--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -28,7 +28,7 @@
         <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
     </div>
 
-    <table mat-table [dataSource]="iotDevice" class="mat-elevation-z8">
+    <table mat-table [dataSource]="iotDevices" class="mat-elevation-z8">
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.NAME' | translate }} </th>
@@ -40,15 +40,25 @@
             <td mat-cell *matCellDef="let element"> {{element.type}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.STATUS' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{this.importStatus}} </td>
+        <ng-container matColumnDef="importStatus">
+            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.IMPORTSTATUS' | translate }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.importStatus}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="errorMessages">
+            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.ERROR' | translate }} </th>
+            <td mat-cell *matCellDef="let element"> 
+                <ul class="mb-0">
+                    <li *ngFor="let error of element.errorMessages">
+                        {{error}}
+                    </li>
+                </ul>    
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
 </div>
 <!-- <div *ngIf="iotDevice.length === 0" class="col-md-6 offset-md-3 mb-5">
     <p>{{ 'APPLICATION.BULK.EMPTY' | translate }}</p>
