IOT-555 fix router link

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -13,7 +13,7 @@
                 </button>
                 <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{organisation.id}}">
                     <li class="dropdown-item">
-                        <a [routerLink]="['edit-user']"
+                        <a [routerLink]="['edit-organisation']"
                             routerLinkActive="active">{{ 'ORGANISATION-TABLE-ROW.EDIT' | translate }}
                         </a>
                     </li>
