--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -1,7 +1,5 @@
-<app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
-  [title]="'NAV.APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
-  [ctaRouterLink]="'new-application'" (updatePageLimit)="updatePageLimit($event)"
-  (selectedSortChange)="changeSort($event)">
+<app-top-bar [title]="'NAV.APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
+  [ctaRouterLink]="'new-application'" (updatePageLimit)="updatePageLimit($event)">
 </app-top-bar>
 
 <div class="m-md-4 p-md-3">
