--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,9 +1,8 @@
-<app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit" [title]="title"
+<app-top-bar [pageLimit]="pageLimit" [title]="title"
   [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
-  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'" (selectedSortChange)="changeSort($event)">
+  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'">
 </app-top-bar>
 
 <div class="m-md-4 p-md-3">
-  <app-datatarget-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit">
-  </app-datatarget-table>
+  <app-datatarget-table [pageLimit]="pageLimit"></app-datatarget-table>
 </div>
