--- a/src/assets/scss/elements/_buttons.scss
+++ b/src/assets/scss/elements/_buttons.scss
@@ -95,6 +95,19 @@ a {
       }
     }
 
+    &--white {
+      background-color: $color-white-001;
+      color: $color-grey-001;
+
+      &::after {
+        background-color: $color-white-001;
+      }
+    }
+
+    &--animated {
+      animation: moveInBottom .5s ease-out .75s;
+      animation-fill-mode: backwards;
+    }
   }
 }
 
