--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,31 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6 offset-md-3 mt-5">
-        <div class="p-5 jumbotron">
+    <div class="col-xs-12 col-md-10 offset-md-1 mt-5">
+        <!-- <div class="p-5 jumbotron">
             <h1>{{'DASHBOARD.WELCOME' | translate}}</h1>
             <p>{{'DASHBOARD.WELCOME-MESSAGE' | translate}}</p>
-        </div>
+        </div> -->
+        <!-- <div class="header__logo-box">
+            <img src="img/logo-white.png" alt="Logo" class="header__logo">
+        </div> -->
 
+        <header class="header">
+            <div class="header__logo-box">
+                <img src="../../assets/images/OS2-iot-svg.svg" alt="Logo" class="header__logo">
+            </div>
+
+            <div class="header__text-box ">
+                <h1 class="heading-primary mb-5">
+                    <span class="heading-primary--main">
+                        {{'DASHBOARD.WELCOME' | translate}}
+                    </span>
+                    <span class="heading-primary--sub">
+                        {{'DASHBOARD.WELCOME-MESSAGE' | translate}}
+                    </span>
+                </h1>
+
+                <a [routerLink]="['/admin/organisations']" routerLinkActive="router-link-active"
+                    class="btn btn-secondary btn--animated">Start med at oprette en organisation</a>
+            </div>
+        </header>
     </div>
 </div>
