--- a/src/assets/scss/elements/_img.scss
+++ b/src/assets/scss/elements/_img.scss
@@ -1,7 +1,8 @@
 .img-logo {
   background-color: transparent;
-  height: 100;
-  margin-top: 15;
+  height: 100px;
+  margin-top: 15px;
+  width: 100px;
 }
 
 @mixin img-cover($url) {
