--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -174,6 +174,13 @@
         </div>
     </mat-tab>
     <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}">
+        <div *ngIf="errorMessages && errorMessages?.length !== 0" class="error-messages p-3">
+            <ul class="mb-0">
+              <li *ngFor="let error of errorMessages">
+                {{error}}
+              </li>
+            </ul>
+        </div>
         <h3 class="p-md-3">{{'IOTDEVICE.DOWNLINK.TITLE' | translate}}</h3>
         <div *ngIf="device.type === 'LORAWAN'">
             <mat-slide-toggle [(ngModel)]="downlink.confirmedDownlink" id="confirmedDownlink" name="confirmedDownlink">
